SIGARIA-19 session storage implementation